[package]
name = "rsmnl"
version = "0.2.1"
authors = ["Ken-ichirou MATSUZAWA <chamas@h4.dion.ne.jp>"]
repository = "https://github.com/chamaken/rsmnl"
keywords = ["netlink", "netfilter"]
license-file = "COPYING"
readme = "README.md"
description = "A rust netlink library imitating libmnl"

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "*"
errno = "*"
rsmnl-derive = { path = "rsmnl-derive" }

[dev-dependencies] # for examples
mio = "*"
pnet = "*"

[dependencies.mio]
features = ["os-poll", "os-util", "udp"]
