[package]
name = "rsmnl"
version = "0.1.0"
authors = ["Ken-ichirou MATSUZAWA <chamas@h4.dion.ne.jp>"]
repository = "https://github.com/chamaken/rsmnl-core"
keywords = ["netlink", "netfilter"]
license-file = "COPYING"
readme = "README.md"
description = "A rust netlink library imitating libmnl"

autoexamples = false

[lib]
crate-type = ["rlib"]

[dependencies]
libc = "0.2.101"
errno = "0.2.7"

[dev-dependencies] # for examples
mio = { version = "0.7.13", features = ["os-poll", "os-util", "udp"] }

[[example]]
name = "genl-family-get"
path = "examples/genl/genl-family-get.rs"

[[example]]
name = "genl-group-events"
path = "examples/genl/genl-group-events.rs"

[[example]]
name = "rtnl-addr-add"
path = "examples/rtnl/rtnl-addr-add.rs"

[[example]]
name = "rtnl-addr-dump"
path = "examples/rtnl/rtnl-addr-dump.rs"

[[example]]
name = "rtnl-link-dump"
path = "examples/rtnl/rtnl-link-dump.rs"

[[example]]
name = "rtnl-link-dump2"
path = "examples/rtnl/rtnl-link-dump2.rs"

[[example]]
name = "rtnl-link-dump3"
path = "examples/rtnl/rtnl-link-dump3.rs"

[[example]]
name = "rtnl-link-event"
path = "examples/rtnl/rtnl-link-event.rs"

[[example]]
name = "rtnl-link-set"
path = "examples/rtnl/rtnl-link-set.rs"

[[example]]
name = "rtnl-neigh-dump"
path = "examples/rtnl/rtnl-neigh-dump.rs"

[[example]]
name = "rtnl-route-add"
path = "examples/rtnl/rtnl-route-add.rs"

[[example]]
name = "rtnl-route-dump"
path = "examples/rtnl/rtnl-route-dump.rs"

[[example]]
name = "rtnl-route-event"
path = "examples/rtnl/rtnl-route-event.rs"

[[example]]
name = "nfct-create-batch"
path = "examples/netfilter/nfct-create-batch.rs"

[[example]]
name = "nfct-daemon"
path = "examples/netfilter/nfct-daemon.rs"

[[example]]
name = "nfct-dump"
path = "examples/netfilter/nfct-dump.rs"

[[example]]
name = "nfct-event"
path = "examples/netfilter/nfct-event.rs"

[[example]]
name = "nf-log"
path = "examples/netfilter/nf-log.rs"

[[example]]
name = "nf-queue"
path = "examples/netfilter/nf-queue.rs"
